# galaxy-upload

./: .gitignore  HISTORY.rst  README.rst  setup.cfg  tox.ini
.github/workflows/: publish.yaml
docs/: conf.py  index.rst
galaxy_upload/: history.py  upload.py
gxupload/: history.py  main.py  upload.py
