[metadata]
author = Galaxy Project and Community
author_email = galaxy-committers@lists.galaxyproject.org
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Academic Free License (AFL)
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
description = Galaxy Upload Utility
keywords =
    Galaxy
license = MIT
license_files =
    LICENSE
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
name = gxupload
url = https://github.com/galaxyproject/gxupload
version = 1.0.0

[options]
include_package_data = True
install_requires =
    bioblend>=0.18.0
    click
    click-option-group
    rich
    tuspy
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
        gxupload = gxupload.main:upload_file
        galaxy-history-search = gxupload.history:main

[options.packages.find]
exclude =
    tests*
