[flake8]
exclude =
    .eggs
    .git
    .tox
    .venv
    build
# E203 is whitespace before ':'; we follow black's formatting here. See https://black.readthedocs.io/en/stable/faq.html#why-are-flake8-s-e203-and-w503-violated
# E501 is line length, managed by black
# W503 is line breaks before binary operators, which has been reversed in PEP 8.
ignore = E203,E501,E741,SFS3,W503

[metadata]
author = Galaxy Project and Community
author_email = galaxy-committers@lists.galaxyproject.org
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Academic Free License (AFL)
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
description = Galaxy Upload Utility
keywords =
    Galaxy
license = MIT
license_files =
    LICENSE
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
name = galaxy-upload
project_urls =
    Bug Tracker = https://github.com/galaxyproject/galaxy-upload/issues
    Documentation = https://galaxy-upload.readthedocs.io/
    Source Code = https://github.com/galaxyproject/galaxy-upload
url = https://github.com/galaxyproject/galaxy-upload
version = attr: galaxy_upload.__version__

[options]
include_package_data = True
install_requires =
    bioblend>=0.18.0
    click
    click-option-group
    rich
    tuspy>=1.0.0,!=1.0.1
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
        galaxy-upload = galaxy_upload.upload:main
        galaxy-history-search = galaxy_upload.history:main

[options.packages.find]
exclude =
    tests*
